--- a/django_DB_Sample/myapp/templates/index.html
+++ b/django_DB_Sample/myapp/templates/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         <title>MY APP</title>
     </head>
     <body>
-        <h2>Simplest CRUD Example</h2>
+        <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+            <div class="container-fluid">
+              <span class="navbar-brand mb-0 h1">Simple CRUD Example</span>
+            </div>
+          </nav>
         <p>This shows a list ot names and lets you Create, Update and Delete them.</p>
-        {% if names_from_context %}
-            <ul>
-                {% for name in names_from_context %}
-                    <li>{{ name.name_value }} <button>Delete</button><button>Update</button></li>
-                {% endfor %}
+        {% if names_from_context %}      
+            {% for name in names_from_context %}
+            <ul class="list-group list-group-horizontal-md"></ul>
+                <li class="list-group-item">{{ name.name_value }}</li>
+                <li class="list-group-item">Delete</li>
+                <li class="list-group-item">Update</li>
             </ul>
-        {% else %}
+            {% endfor %}
+         {% else %}
             <h3>Please go to the admin and add a Name under 'MYAPP'</h3>
         {% endif %}
         <h3>Add a Name</h3>
@@ -25,5 +38,8 @@
             {% endfor %}
             <input type="submit"name="submit" value="Create">
         </form>
+        <!-- Option 2: Separate Popper and Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     </body>
 </html>
