--- a/django_DB_Samples/employee_project/employee_register/templates/employee_register/employee_form.html
+++ b/django_DB_Samples/employee_project/employee_register/templates/employee_register/employee_form.html
@@ -4,6 +4,26 @@
 {%load crispy_forms_tags %}
 <form action="" method="post" autocomplete="off">
     {% csrf_token %}
-    {{form|crispy}}
+    {{form.fullname|as_crispy_field}}
+    {{form.mobile|as_crispy_field}}
+    <div class="row">
+        <div class="col-md-4">
+            {{form.emp_code|as_crispy_field}}
+        </div>
+        <div class="col-md-8">
+            {{form.position|as_crispy_field}}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <button class="btn btn-success w-100 btn-lg"type="submit">
+                <i class="fas fa-database"></i> Submit</button>
+        </div>
+        <div class="col-md-4">
+            <button class="btn btn-secondary w-100 btn-lg">
+                <i class="fas fa-stream"></i> Back to list
+            </button>
+        </div>
+    </div>
 </form>
 {%endblock%}
