--- a/django_DB_Samples/employee_project/employee_register/templates/employee_register/employee_form.html
+++ b/django_DB_Samples/employee_project/employee_register/templates/employee_register/employee_form.html
@@ -20,9 +20,9 @@
                 <i class="fas fa-database"></i> Submit</button>
         </div>
         <div class="col-md-4">
-            <button class="btn btn-secondary w-100 btn-lg">
+            <a href="{% url 'employee_list' %}" class="btn btn-secondary w-100 btn-lg">
                 <i class="fas fa-stream"></i> Back to list
-            </button>
+            </a>
         </div>
     </div>
 </form>
